overflow scrolling fix part 2

--- a/assets/css/holler-frontend.css
+++ b/assets/css/holler-frontend.css
@@ -64,6 +64,7 @@
 	z-index: 99997;
 	width: 300px;
 	height: auto;
+	max-height: 90%;
 	border-radius: 3px;
 	padding: 15px;
 	overflow: auto;
